--- a/menu.html
+++ b/menu.html
@@ -13,7 +13,7 @@
     <nav>
         <ul>
             <li><a href="index.html">Homepage</a></li>
-            <li><a href="menu.html">Manu</a></li>
+            <li><a href="menu.html">Menu</a></li>
             <li><a href="special_menu.html">This Week Special</a></li>
         </ul>
     </nav>
